style/modules/header/_header-bottom-left.scss
// header image, pagename, tabmenu
#header-bottom-left {
  position: absolute;

  @if $header-large {
		top: 172px;
	} @else {
    top: 86px;
	}

  height: 53px;
  margin: 0 !important;
  font-size: 14px;

  // subreddit name
  // nested to avoid body:link styling
  .pagename {
    display: inline-block;
    margin: 0;
    color: transparent;
    font-size: 16px;

    a {
      position: relative;
      display: inline-block;
      height: 53px;
      padding: 0 16px;
      color: $dark-secondary-text;
      font-variant: normal;
      line-height: 53px;
      text-transform: lowercase;
    }

    &:hover a {
      color: $dark-text;
      text-decoration: none;
    }
  }

  // tabmenu
  .tabmenu {
    position: absolute;
    left: 0;
    top: 73px;
    padding-left: 16px;
    margin-top: 0;

    li {
      // tab styles
      a,
      #viewImagesButton {
        @include tab-list-anchors(true, transparent, $light-accent, $primary, $dark-secondary-text, $dark-text);
      }

      // styles tabs
      a,
      #viewImagesButton {
        width: initial;
      }

      // ensures selected tab remains unchanged
      &.selected a { background-color: transparent; }
    }
  }
}

.res-nightmode #header-bottom-left .tabmenu li.selected a {
  border-bottom-color: $accent;
  border-bottom-style: solid;
  @include border-width(0 0 2px 0);
}

// snooface
#header-img,
#header-img.default-header {
  height: 53px;
  width: 0;
  @include margin(0 0 0 40px);
  padding-right: 35px; // makes space for snoo visibility
  background-position: 0 -117px;
}

@media (min-width: $screen-lg-min) {
  #header-bottom-left {
    @if $header-large {
      top: 245px;
    } @else {
      top: 159px;
    }

    height: 64px;

    // positioning fix for pagename and tabmenu when reddit pushes custom banner image
    .pagename a {
      height: 64px;
      line-height: 62px; // to compensate for taller height of tabs
    }

    // restore initial tabmenu values
    .tabmenu {
      left: initial;
      top: initial;
      width: initial;
      padding-left: initial;
    }
  }

  #header-img,
  #header-img.default-header {
    height: 64px;
    @include margin(0 0 0 16px);
  }
}

